--- a/src/app/pages/auth/components/step1/step1.component.html
+++ b/src/app/pages/auth/components/step1/step1.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
     <mat-form-field>
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" type="email" formControlName="email" required>
+        <input matInput type="email" formControlName="email" required>
          @if(form.get('email')?.errors?.['email']) {
             <mat-hint>Invalid email.</mat-hint>
         }
@@ -10,14 +10,11 @@
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" required>
     </mat-form-field>
-     <mat-form-field>
+    <mat-form-field>
         <mat-label>Confirm password</mat-label>
-        <input matInput placeholder="Confirm password" type="password" formControlName="confirmPassword" required>
+        <input matInput type="password" formControlName="confirmPassword" required>
         @if(form.get('confirmPassword')?.hasError('passwordMismatch')) {
             <mat-hint>Passwords do not match.</mat-hint>
         }
     </mat-form-field>
-    <div>
-        <button matButton (click)="navigate($event)" [disabled]="!form.valid">Next</button>
-    </div>
 </form>
