--- a/src/app/pages/auth/components/step2/step2.component.html
+++ b/src/app/pages/auth/components/step2/step2.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
     <mat-form-field>
         <mat-label>Choose industry</mat-label>
-        <mat-select required formControlName="industry">
+        <mat-select formControlName="industry" required>
             @for(item of industries; track item) {
                 <mat-option [value]="item">{{item}}</mat-option>
             }
@@ -9,7 +9,7 @@
     </mat-form-field>
      <mat-form-field>
         <mat-label>Experience in years</mat-label>
-        <input matInput type="number" placeholder="Experience in years" formControlName="experienceInYears" required>
+        <input matInput type="number" formControlName="experienceInYears" required>
         @if(form.get('experienceInYears')?.errors?.['numberBetween']) {
             <mat-hint>Experience must be between 0 and 50.</mat-hint>
         }
@@ -17,14 +17,10 @@
 
      <mat-form-field>
         <mat-label>Choose Your role</mat-label>
-        <mat-select required formControlName="yourRole">
+        <mat-select formControlName="yourRole" required>
             @for(item of roles; track item) {
-                <mat-option value="item">{{item}}</mat-option>
+                <mat-option [value]="item">{{item}}</mat-option>
             }
         </mat-select>
     </mat-form-field>
-    <div>
-        <button matButton (click)="navigateBack($event)">Back</button>
-        <button matButton (click)="navigate($event)" [disabled]="!form.valid">Next</button>
-    </div>
 </form>
